--- a/src/main/resources/templates/basicLayout.html
+++ b/src/main/resources/templates/basicLayout.html
@@ -4,18 +4,20 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
   <meta charset="UTF-8">
-<!--  <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">bknk</title>-->
-<!--  <th:block layout:fragment="css"></th:block>-->
-<!--  <link rel="stylesheet" th:href="@{/css/common.css}">-->
+  <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">bknk</title>
+  <th:block layout:fragment="css"></th:block>
+  <link rel="stylesheet" th:href="@{/css/common.css}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!--  fontauesome-->
-<!--  <th:block layout:fragment="js"></th:block>-->
+  <th:block layout:fragment="js"></th:block>
 </head>
 <body>
 <div id="container">
   <th:block th:replace="commonHeader :: header"></th:block>
   <section>
-    <th:block layout:fragment="content"></th:block>
+    <div id="wrap">
+      <th:block layout:fragment="content"></th:block>
+    </div>
   </section>
   <th:block th:replace="commonFooter :: footer"></th:block>
 </div>
