--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="basicLayout">
     <th:block layout:fragment="css">
@@ -7,8 +8,6 @@
     <th:block layout:fragment="js">
     </th:block>
     <th:block layout:fragment="content">
-        <div>home</div>
+            <div id="Container">home</div>
     </th:block>
-</html>
-</body>
 </html>
