--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -8,6 +8,6 @@
     <th:block layout:fragment="js">
     </th:block>
     <th:block layout:fragment="content">
-            <div id="Container">home</div>
+            <div class="Container">home</div>
     </th:block>
 </html>
