--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -4,23 +4,36 @@
       layout:decorator="basicLayout">
 <head><title>join</title></head>
 <th:block layout:fragment="css">
+    <link rel="stylesheet" th:href="@{/css/user/login.css}">
 </th:block>
 <th:block layout:fragment="js">
 </th:block>
 <th:block layout:fragment="content">
-    <div>
-        <form th:action="@{login}" method="post">
-            <div><input type="email" placeholder="email" autofocus required></div>
-            <div><input type="password" placeholder="password" required> </div>
-            <div><input type="submit"value="로그인"></div>
-        </form>
-    </div>
+    <div class="contW480">
+        <div th:if="${param.needEmail != null and param.needEmail[0]=='1'}">이메일 인증을 해주세요</div>
+        <!--  밑에 userEntity에 값을 넣어줘 버려서 email을 needEmail로 바꿔서 중복됨을 없앴다-->
+        <div th:if="${param.auth != null and param.auth[0]=='1'}">인증되었습니다.</div>
+        <!--/*  <div th:if="${#request.getParameter('auth')=='1'}" th:text="authauth"></div>*/-->
+        <div th:if="${param.auth != null and param.auth[0]=='0'}">인증에 실패하였습니다.</div>
+        <div th:if="${param.error}">로그인에 실패하였습니다.</div>
 
-    <div class="social-container">
-        <a class="social" th:href="@{/oauth2/authorization/naver}">네이버</a>
-        <a class="social" th:href="@{/oauth2/authorization/kakao}">카카오</a>
-        <a class="social" th:href="@{/oauth2/authorization/google}">구글</a>
-        <a class="social" th:href="@{/oauth2/authorization/facebook}">페이스북</a>
+        <div class="logoCont">
+            <span class="logo"><i class="fas fa-bus"> BKNK</i></span>
+        </div>
+        <div>
+            <form th:action="@{login}" method="post" th:object="${userEntity}">
+                <div><input type="email" th:field="*{email}" placeholder="email" autofocus required></div>
+                <div><input type="password" th:field="*{pw}" placeholder="password" required> </div>
+                <div><input type="submit" class="btn" value="로그인"></div>
+            </form>
+        </div>
+
+        <div class="social-container">
+            <a class="social" th:href="@{/oauth2/authorization/naver}">네이버</a>
+            <a class="social" th:href="@{/oauth2/authorization/kakao}">카카오</a>
+            <a class="social" th:href="@{/oauth2/authorization/google}">구글</a>
+            <a class="social" th:href="@{/oauth2/authorization/facebook}">페이스북</a>
+        </div>
     </div>
 </th:block>
 </html>
