--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -28,7 +28,7 @@
 
                 <div>
                     <div id="chkFrmResult"></div>
-                    <input type="submit" class="btn" value="회원가입">
+                    <input type="submit" class="btn pointer" value="회원가입">
                 </div>
             </form>
         </div>
