--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -24,7 +24,7 @@
             <form th:action="@{login}" method="post" th:object="${userEntity}">
                 <div><input type="email" th:field="*{email}" placeholder="email" autofocus required></div>
                 <div><input type="password" th:field="*{pw}" placeholder="password" required> </div>
-                <div><input type="submit" class="btn" value="로그인"></div>
+                <div><input type="submit" class="btn pointer" value="로그인"></div>
             </form>
         </div>
 
