--- a/src/main/resources/templates/commonHeader.html
+++ b/src/main/resources/templates/commonHeader.html
@@ -17,9 +17,9 @@
             </ul>
             <ul class="menus" sec:authorize="isAuthenticated()">
                 <li>
-                    <a th:href="@{/user/profile}" >
+                    <a th:href="@{/user/userFeed}" >
                         <span>
-                            프로필
+
                         </span>
                     </a>
                 </li>
