--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="basicLayout">
-<head><title>join</title></head>
+<head><title>회원가입</title></head>
 <th:block layout:fragment="css">
     <link rel="stylesheet" th:href="@{/css/user/join.css}">
 </th:block>
