--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="basicLayout">
-<head><title>join</title></head>
+<head><title>로그인</title></head>
 <th:block layout:fragment="css">
     <link rel="stylesheet" th:href="@{/css/user/login.css}">
 </th:block>
