--- a/src/main/resources/static/css/user/login.css
+++ b/src/main/resources/static/css/user/login.css
@@ -7,4 +7,6 @@ input {
 }
 
 .logoCont{ padding-top: 50px; padding-bottom: 15px;}
-.logo { font-size: 58px; color: #707070;}
+.logo { font-size: 58px; background: linear-gradient(to right, #ff4692, #84e7f6);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; }
