--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -10,9 +10,11 @@
 </th:block>
 <th:block layout:fragment="content">
     <div class="contW480">
-        <div th:if="${param.needEmail != null and param.needEmail[0]=='1'}">이메일 인증을 해주세요</div>
+        <div class="red" th:if="${param.result != null and param.result[0]=='0'}">이미 가입한 이메일 입니다</div>
+        <div class="red" th:if="${param.result != null and param.result[0]=='1'}">이메일 인증을 해주세요</div>
+        <div class="red" th:if="${param.result != null and param.result[0]=='3'}">이메일 인증을 하지 않은 이메일 입니다. 이메일 인증을 해주세요</div>
         <!--  밑에 userEntity에 값을 넣어줘 버려서 email을 needEmail로 바꿔서 중복됨을 없앴다-->
-        <div th:if="${param.auth != null and param.auth[0]=='1'}">인증되었습니다.</div>
+        <div class="red" th:if="${param.auth != null and param.auth[0]=='1'}">인증되었습니다.</div>
         <!--/*  <div th:if="${#request.getParameter('auth')=='1'}" th:text="authauth"></div>*/-->
         <div th:if="${param.auth != null and param.auth[0]=='0'}">인증에 실패하였습니다.</div>
         <div th:if="${param.error}">로그인에 실패하였습니다.</div>
